# chromium-profile-cli

./: .gitignore  README.md  STATUS.md  pyproject.toml  setup-dev.sh
src/chromium_cli/: __init__.py  main.py
src/chromium_profile_cli/: __init__.py  leveldb.py  local.py  main.py
