[project]
name = "chromium-cli"
version = "0.1.0"
description = "CLI tool for accessing Chromium browser data (tabs, history, bookmarks)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Jai Dhyani", email = "jai@dhyani.net" },
    { name = "Claude Opus 4.6", email = "noreply@anthropic.com" },
]
keywords = [
    "cli",
    "browser",
    "chrome",
    "brave",
    "chromium",
    "tabs",
    "history",
    "bookmarks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "chromium-sync-mcp>=0.3.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/jaidhyani/chromium-cli"
Repository = "https://github.com/jaidhyani/chromium-cli"

[project.scripts]
chromium-cli = "chromium_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chromium_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
