[project]
name = "chromium-profile-cli"
version = "0.2.0"
description = "CLI tool for accessing Chromium browser data (tabs, history, bookmarks)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Jai Dhyani", email = "jai@dhyani.net" },
    { name = "Claude Opus 4.6", email = "noreply@anthropic.com" },
]
keywords = [
    "cli",
    "browser",
    "chrome",
    "brave",
    "chromium",
    "tabs",
    "history",
    "bookmarks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/jaidhyani/chromium-profile-cli"
Repository = "https://github.com/jaidhyani/chromium-profile-cli"

[project.scripts]
chromium-profile-cli = "chromium_profile_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chromium_profile_cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
